--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,6 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.5",
     "mysql2": "^3.10.2",
-    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3"
   }
 }
