--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm install",
+    "build": "npm run build",
     "start": "node server.js"
+
   },
   "keywords": [],
   "author": "",
