--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "install": "npm install",
     "build": "npm run build",
     "start": "node server.js"
-
   },
   "keywords": [],
   "author": "",
