--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,14 +15,18 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.0",
     "mysql2": "^3.10.2",
+    "nodemailer": "^6.9.14",
     "sequelize": "^6.37.3",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.1"
   },
   "devDependencies": {
     "eslint": "^9.6.0",
